--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" type="image/x-icon" href="/space-nexus-defense-comm/favicon.ico">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Space Nexus Defense Communications</title>
+    <script type="module" crossorigin>
+      window.__BASE_URL__ = '/space-nexus-defense-comm/';
+    </script>
   </head>
   <body>
     <div id="app"></div>
